# example-signature

./: CMakeLists.txt  README.md  conanfile.txt
lib/: signature.cpp  signature.h
tests/: signature_tests.cpp
